--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,7 +9,7 @@ and open the template in the editor.
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-        <title>JSP Page</title>
+        <title>hoba-authentication</title>
 
 
         <!--
@@ -334,6 +334,7 @@ and open the template in the editor.
                                                     $("#userdata").show();
 
                                                     var data = hoba.getUserData();
+                                                    console.log(data);
                                                     if (data.field1 != null) {
                                                         $("#field1").val(data.field1);
                                                     }
