--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -178,7 +178,7 @@ and open the template in the editor.
         <script type="text/javascript">
 
                                                 //serverURL= "http://10.112.69.233:8083/hoba-authentication/hoba/";
-                                                var serverURL = "localhost:8080/hoba-authentication/hoba/";
+                                                var serverURL = "localhost:8080/hoba-authentication/.well-known/hoba/";
 
                                                 var initObj = {
                                                     protocol: "http://",
